# middleware/validation.js
@@ -64,15 +64,15 @@ exports.validateVenue= [
     body('address').optional().not().isEmpty().withMessage('Venue address is required'),
     body('city').optional().not().isEmpty().withMessage('City is required'),
     body('state').optional().not().isEmpty().withMessage('State is required'),
-    body('postal').optional().not().isEmpty().withMessage('Postal is required'),
-    body('capacity').optional().not().isEmpty().withMessage('Postal is required')
+    body('postal').optional().not().isEmpty().withMessage('postal is required'),
+    body('capacity').optional().not().isEmpty().withMessage('Capacity is required')
 ]
 exports.validateVenueUpdate = [
     body('name').optional().not().isEmpty().withMessage('Venue name is required'),
     body('address').optional().not().isEmpty().withMessage('Venue address is required'),
     body('city').optional().not().isEmpty().withMessage('City is required'),
     body('state').optional().not().isEmpty().withMessage('State is required'),
-    body('postal').optional().not().isEmpty().withMessage('Postal is required'),
+    body('postal').optional().not().isEmpty().withMessage('postal is required'),
     body('capacity').optional().not().isEmpty().withMessage('Postal is required')
 ]
 
